
cc_library(
	name = "statechart",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_conversion//:conversion",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_thread//:thread"
	],
)
